Fix code block overflow should scroll

--- a/style/main.css
+++ b/style/main.css
@@ -85,6 +85,7 @@ pre code {
   font-size: 90%;
   line-height: 1.2em;
   display: block;
+  overflow-x: auto;
 }
 
 code {
